--- a/src/css/main.less
+++ b/src/css/main.less
@@ -12,6 +12,7 @@
 body,html{
     width: 100%;
     height: 100%;
+    font-family: '微软雅黑';
 }
 
 .childTF(@index;@rest...){
@@ -312,7 +313,6 @@ body,html{
             border-radius: 10px;
             transition: background-color .3s;
             cursor: default;
-            overflow-y: auto;
 
             &.collapse{
                 transform: perspective(1500px) rotateY(-90deg);
@@ -397,7 +397,7 @@ body,html{
         .exp{
             padding: 25px 22px;
             box-sizing: border-box;
-            
+            overflow-y:auto;
             .exp_card{
                 padding: 16px;
                 border: 2px solid #fff;
@@ -410,7 +410,7 @@ body,html{
                     font-family: Impact, Charcoal, sans-serif;
                     margin-right: 10px;
                 }
-                &:last-child{
+                &.to_be_continue{
                     line-height: 40px;
                     text-align: center;
                     font-size: 25px;
@@ -450,14 +450,14 @@ body,html{
                     padding: 14px;
                     margin-bottom: 16px;
                 }
-                & .exp_card:last-child{
+                & .exp_card.to_be_continue{
                     line-height: 35px;
                     font-size: 22px;
                 }
             }
             
             &:hover{
-                .exp_card:last-child{
+                .exp_card.to_be_continue{
                     animation: bouncein 0.5s linear forwards;
                     .bounce(@scale;@opacity){
                         transform: scale(@scale);
